[gd_scene load_steps=18 format=3 uid="uid://cidaqe244nw7y"]

[ext_resource type="Texture2D" uid="uid://b2rtfkuowvp2g" path="res://sprites/boss/bridge.png" id="1_llj2o"]
[ext_resource type="Script" path="res://bridge.gd" id="1_lr4ug"]
[ext_resource type="Shader" path="res://flash.gdshader" id="2_536if"]
[ext_resource type="Texture2D" uid="uid://cywju1cuwr4v7" path="res://sprites/boss/bridge-dead.png" id="3_nrbpu"]
[ext_resource type="Texture2D" uid="uid://1b3orw6xdg0l" path="res://sprites/explosions/big-explosion.png" id="4_kn7mr"]
[ext_resource type="AudioStream" uid="uid://d1m6476g83s56" path="res://sound/sfx/sfx_exp_long4.wav" id="5_vxb0t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khp56"]
size = Vector2(64, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nvnot"]
resource_local_to_scene = true
shader = ExtResource("2_536if")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vaex1"]
atlas = ExtResource("1_llj2o")
region = Rect2(0, 0, 64, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjhl1"]
atlas = ExtResource("3_nrbpu")
region = Rect2(0, 0, 64, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_vypsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaex1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjhl1")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_75u70"]
atlas = ExtResource("4_kn7mr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2sv6"]
atlas = ExtResource("4_kn7mr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cj60"]
atlas = ExtResource("4_kn7mr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vyi1"]
atlas = ExtResource("4_kn7mr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcowa"]
atlas = ExtResource("4_kn7mr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4rw06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75u70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2sv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cj60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vyi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcowa")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="bridge" type="Area2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_lr4ug")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_khp56")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_nvnot")
position = Vector2(0, 3)
sprite_frames = SubResource("SpriteFrames_vypsf")
autoplay = "default"

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-9.53674e-07, 0)
scale = Vector2(2, 1)
sprite_frames = SubResource("SpriteFrames_4rw06")
frame = 4
frame_progress = 1.0

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vxb0t")

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
